--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img src="../assets/2.png" class="imgsize" height="50px" alt="LoGO">
+    <a class="navbar-brand" href="#" style="color: blue;">TCS</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-        <a routerLink="employees" class="nav-link" routerLinkActive="active">Employee List</a>
+        <a routerLink="employees" class="nav-link" routerLinkActive="active" style="color: blue;">Employee List</a>
     </li>
     <li class="nav-item">
-        <a routerLink="add" class="nav-link" routerLinkActive="active">Add Employee</a>
+        <a routerLink="add" class="nav-link" routerLinkActive="active" style="color: blue;">Add Employee</a>
     </li>
   </ul>
 </nav>
